package designpatterns.creational.abstractfactory.demofactorymethod.button;

public interface Button {
    public void paint();
}
