package designpatterns.creational.abstractfactory.demofactorymethod.button;

public class LinuxButton implements Button {
    @Override
    public void paint() {
        System.out.println("You have created LinuxButton.");
    }
}
