package designpatterns.creational.abstractfactory.demofactorymethod.checkbox;

public interface Checkbox {
    public void paint();
}
